crates/supersigil-rust/tests/fixtures/fail/malformed_empty_args.rs
use supersigil_rust::verifies;

#[verifies()]
#[test]
fn test_empty() {}

fn main() {}
