crates/supersigil-rust/tests/fixtures/fail/malformed_empty_args.stderr
error: `#[verifies(...)]` requires at least one criterion reference string
 --> tests/fixtures/fail/malformed_empty_args.rs:3:1
  |
3 | #[verifies()]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `verifies` (in Nightly builds, run with -Z macro-backtrace for more info)
